--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div> 
             <div id="timer"></div>
-                <div id="counter"> 20 </div>
+                <div id="counter"> </div>
             </div>
         <div id="score" style="display: none"></div>
     </div>  
