--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="jumbotron">
+          <h1 class="display-4">Code Quiz!</h1>
+        </div>
+      </div>
     <div class="container">
         <div id="question-container" class="hide"> 
             <div id="question">Question</div>
