--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-lg-6 mx-auto p-3">
-                    <span>See how many questions you can answer correctly within the time limit!
+                    <span>Test your coding knowlegde and see how many questions you can answer correctly within the time limit!
                     </span>
                 </div>
             </div>
