updating style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Quiz!!</title>
+    <title>Coding Quiz!!</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -44,14 +44,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-lg-6 mx-auto py-2">
-                    <button class="btn btn-primary btn-lg answer d-block mb-1" style="width: fit-content;" value="0"
+                <div id="btn-grid" class="col-12 col-lg-6 mx-auto py-2">
+                    <button class="btn btn-primary btn-lg answer d-block mb-1" value="0"
                         type="submit"><span id="answer1"></span></button>
-                    <button class="btn btn-primary btn-lg answer d-block mb-1" style="width: fit-content;" value="1"
+                    <button class="btn btn-primary btn-lg answer d-block mb-1" value="1"
                         type="submit"><span id="answer2"></span></button>
-                    <button class="btn btn-primary btn-lg answer d-block mb-1" style="width: fit-content;" value="2"
+                    <button class="btn btn-primary btn-lg answer d-block mb-1" value="2"
                         type="submit"><span id="answer3"></span></button>
-                    <button class="btn btn-primary btn-lg answer d-block mb-1" style="width: fit-content;" value="3"
+                    <button class="btn btn-primary btn-lg answer d-block mb-1" value="3"
                         type="submit"><span id="answer4"></span></button>
                 </div>
             </div>
