--- a/highscores.html
+++ b/highscores.html
@@ -15,7 +15,7 @@
 <body>
 
     <main>
-        <div class="container position-relative" style="top: 100px;">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-md-9 col-lg-6 mx-auto p-2 text-center">
                     <h1>Highscores</h1>
