--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
                 </div>
             </div>
         </div>
-        </div>
 
         <div class="container" id="endQuiz">
             <div class="row">
-                <div class="col-12 col-lg-6 mx-auto p-3 text-left">
+                <div class="col-12 col-lg-5 mx-auto text-left p-3">
                     <h3 id="end">End of Quiz!</h3>
                 </div>
             </div>
@@ -103,6 +102,7 @@
         </div>
 
     </main>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
